@@ -1,3 +1,5 @@
+* Fixed highlighting bugs whereby widgets inside a highlighted tab would incorrectly display an inherited highlight state. This could be seen when dragging a node into the node editor with either nested tabs or a nested VectorDataWidget.
+
 0.57.0
 ======
 
